--- a/src/server_candidate/Source/views/candidate/content_login.hbs
+++ b/src/server_candidate/Source/views/candidate/content_login.hbs
@@ -25,7 +25,7 @@
             <button type="submit" id="submit_form_login">Đăng nhập</button>
             <div id="or">Hoặc</div>
         </form>
-        <button type="submit" id="submit_login_facebook"></button>
+        <a type="submit" id="submit_login_facebook" href="/candidate/auth/facebook"></a>
         <img src="/css/style/image/ic_facebook.svg" id="ic_facebook" alt="ic_facebook">
         <a type="submit" id="submit_login_google" href="/candidate/auth/google"></a>
         <img src="/css/style/image/ic_google.svg" id="ic_google" alt="ic_google">
